--- a/code/WebApp/WebApp/Components/NotificationModal.razor
+++ b/code/WebApp/WebApp/Components/NotificationModal.razor
@@ -1,4 +1,5 @@
-﻿@rendermode InteractiveServer
+﻿@using System.ComponentModel.DataAnnotations
+@rendermode InteractiveServer
 @inject NotificationService notificationService
 
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#notificationModal">
@@ -21,6 +22,10 @@
                     <label for="priceInput" class="form-label">Notification Price</label>
                     <input type="number" class="form-control" id="priceInput" @bind="NotificationPrice">
                 </div>
+
+                <div class="mt-3 text-center">
+                    <span class="text-danger">@errorMessage</span>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -38,6 +43,7 @@
     [Parameter] public double CurrentPrice { get; set; }
     public double NotificationPrice { get; set; }
     public string Email { get; set; }
+    private string? errorMessage;
 
     public string NotificationToast { get; set; } = "";
 
@@ -45,6 +51,13 @@
     {
         if (string.IsNullOrWhiteSpace(Email) || NotificationPrice == 0)
         {
+            errorMessage = "Please fill in all fields.";
+            return;
+        }
+
+        if (new EmailAddressAttribute().IsValid(Email))
+        {
+            errorMessage = "Please enter a valid email address.";
             return;
         }
 
@@ -57,6 +70,7 @@
             await notificationService.CreateNotificationAsync(Email, Name, NotificationPrice, "below");
         }
 
+        errorMessage = "";
         NotificationToast = $"Notification for {Name} set successfully at {NotificationPrice}!";
 
         await CloseModalAsync("#notificationModal");
