--- a/code/WebApp/WebApp/Components/Pages/Wallet.razor
+++ b/code/WebApp/WebApp/Components/Pages/Wallet.razor
@@ -79,7 +79,7 @@
 
 
 <div style="overflow-x: auto; overflow-y: hidden;">
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Cryptocurrency</th>
