fix: now only valid email addresses can be set for notifications

--- a/code/WebApp/WebApp/Components/NotificationModal.razor
+++ b/code/WebApp/WebApp/Components/NotificationModal.razor
@@ -55,7 +55,7 @@
             return;
         }
 
-        if (new EmailAddressAttribute().IsValid(Email))
+        if (!new EmailAddressAttribute().IsValid(Email))
         {
             errorMessage = "Please enter a valid email address.";
             return;
