fix: now you can only buy/sell at marketprice and add transactions where you selected a cryptocurrency and the amount ist >=0 and pricepaidall=>0

--- a/code/WebApp/WebApp/Components/BuySellAtMarketpriceModal.razor
+++ b/code/WebApp/WebApp/Components/BuySellAtMarketpriceModal.razor
@@ -235,6 +235,10 @@
 
     private async Task AddTransaction()
     {
+        if(errorMessage != "")
+        {
+            return;
+        }
 
         transaction.TransactionDate = DateTime.Now;
 
@@ -281,6 +285,21 @@
         if (string.IsNullOrWhiteSpace(selectedWallet))
         {
             errorMessage = "Please select a wallet";
+            return;
+        }
+        if (string.IsNullOrEmpty(transaction.SelectedCryptocurrency))
+        {
+            errorMessage = "Please select a cryptocurrency";
+            return;
+        }
+        if(transaction.Amount <= 0)
+        {
+            errorMessage = "Amount must be greater than 0";
+            return;
+        }
+        if(transaction.PricePaidAll <= 0)
+        {
+            errorMessage = "Price must be greater than 0";
             return;
         }
 
