--- a/code/WebApp/WebApp/Components/AddTransactionModal.razor
+++ b/code/WebApp/WebApp/Components/AddTransactionModal.razor
@@ -169,6 +169,22 @@
             errorMessage = "Please select a wallet";
             return;
         }
+        if (string.IsNullOrWhiteSpace(transaction.SelectedCryptocurrency))
+        {
+            errorMessage = "Please select a cryptocurrency";
+            return;
+        }
+        if (transaction.Amount <= 0)
+        {
+            errorMessage = "Amount must be greater than 0";
+            return;
+        }
+        if (transaction.PricePaidAll <= 0)
+        {
+            errorMessage = "Price must be greater than 0";
+            return;
+        }
+
 
         await transactionService.CreateTransactionAsync(username, transaction.SelectedCryptocurrency, transaction.Amount, transaction.PricePaidAll, transaction.TransactionDate, transactionType, selectedWallet);
 
